--- a/GROUP_PART (1) (1) (1).ipynb
+++ b/GROUP_PART (1) (1) (1).ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# DSCI 100 Project Group 1 \n",
-    "**By: Tima Komarov (82239450), Carmen Wen (95556593)**\n",
+    "**By: Tima Komarov (82239450), Carmen Wen (95556593), Pim-on Ingkanisorn(44803013)**\n",
     "<br>"
    ]
   },
