--- a/GROUP_PART (1) (1) (1).ipynb
+++ b/GROUP_PART (1) (1) (1).ipynb
@@ -13,14 +13,24 @@
   {
    "cell_type": "markdown",
    "id": "d58dbe8c-6ea8-479f-9d98-5bd952b919a1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Introduction\n",
     "The UBC Computer Science research group, led by Frank Wood, set up a MineCraft server to collect in-game data on player behaviours. The recorded data will be used in this project to explore factors that influence players' engagement, specifically focusing on which characteristics and behaviours predict a player's likelihood of subscribing to the game's newsletter. \n",
     "\n",
     "For this project, we aim to answer the broad question: \"What player characteristics and behaviors are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\" More specifically, we are trying to examine **the correlation between the total playtime and age, with newspaper subscription status** to determine if these 2 factros can be used to predict newsletter subscription. \n",
     "\n",
-    "We would do this by using the players.csv dataset, which contains about 7 variables. However, for our analysis, only played_hours, and Age will be utilized to develop a predictive model for subscription likelihood."
+    "We would do this by using the players.csv dataset, which contains about 7 variables. However, for our analysis, only played_hours, and Age will be utilized to develop a predictive model for subscription likelihood.\n",
+    "\n",
+    "| Variable Name  | Type        | Description |\n",
+    "|---------------|------------|-------------|\n",
+    "| played_hours| Numeric     | Total hours played |\n",
+    "| Age         | Numeric     | Player’s age(8 to 50 years) |\n",
+    "| subscribe   | logical     | subscription status(TRUE/FALSE) |\n",
+    "\n",
+    "In this dataset, the subscription status must be converted to a factor variable during wrangling, while Age and played hours stay as numeric variables. Then we must ensure that all NA values are removed before creating a classification model.\n"
    ]
   },
   {
