--- a/GROUP_PART FINAL.ipynb
+++ b/GROUP_PART FINAL.ipynb
@@ -965,7 +965,7 @@
    "source": [
     "*Figure 3 - Scatter Plot of Playtime vs. Age (Coloured by Subscription Status)*\n",
     "\n",
-    "The above scatter plot reveals a that many players in their early twenties have the most played hours."
+    "The above scatter plot visualizes the brief relationship between playtime and age with subscription to give us an idea of how to approach the project. This graph reveals that most of the players(bulk) are under the age of 30. Subscription players are more common among people with higher play hours and younger ages, while non-subscribed players are common among players with lower play hours and players with older ages. This visualization shows that these 2 factors have the potential to be the predictors for subscription status. "
    ]
   },
   {
@@ -1808,7 +1808,8 @@
    "id": "464d74a4-95d8-47c2-92c3-922a4629a34b",
    "metadata": {},
    "source": [
-    "Figure 5"
+    "Figure 5:A bar plot of Mean Ages vs Subscription status\n",
+    "Non-subscibed players have slightly higher mean age compared to the subscribed ones."
    ]
   },
   {
@@ -2298,7 +2299,10 @@
    "id": "039eb703-0147-4f91-99c0-752f1623b553",
    "metadata": {},
    "source": [
-    "Figure 6 "
+    "Figure 6: A bar graph of played time vs subscription status\n",
+    "Players who are subscribed have significantly higher playtime compared to non-subscribers.\n",
+    "\n",
+    "Figures 5 and 6 demonstrate that play time has a stronger relationship with subscription status than age does. To avoid biased model performance, these 2 factors should be scaled before being used in the prediction model. This will allow both predictors to contribute equally."
    ]
   },
   {
@@ -2347,6 +2351,8 @@
    "id": "722d9eba-218d-4b12-8498-4e482bec573c",
    "metadata": {},
    "source": [
+    "The random accuracy is found to be 60.8%. This will be then used to compare with our model accuracy to see the performance of the model we made.\n",
+    "\n",
     "Here, the data is split into the training set (`player_train`) and the testing set (`player_test`). We choose to use 80% of the initial data as the training set and 20% as the testing set, as per general practice."
    ]
   },
@@ -2835,7 +2841,8 @@
    "source": [
     "*Figure 7 - Line plot of accuracy versus k to find the best k-value*\n",
     "\n",
-    "**changed k from 0 to 10** choose 7"
+    "**changed k from 0 to 10** choose 7 since it has the highest accuracy. In our model, we used 7 neighbours(k) to predict the subscription status. This k was used because of the small size of this dataset(194 observations after dropping NA values); the limit range of k was then limited to 1 to 10. Using large k with such a small dataset would likely lead to an underfitting model, although we previously found that k=19 yields the highest accuracy from a similar model to figure 7 that we modelled. In order to improve the model performance and allow for more optimal k, we would need a bigger dataset to reduce the risk of an underfitting model.\n",
+    "  "
    ]
   },
   {
@@ -3049,7 +3056,8 @@
    "id": "50b0dc92-83fe-4493-92cf-f637ec1c021d",
    "metadata": {},
    "source": [
-    "*Figure 6 - Accuracy of the model*"
+    "*Figure 6 - Accuracy of the model*\n",
+    "This shows that our prediction model yields 67.5% accuracy."
    ]
   },
   {
@@ -3081,7 +3089,6 @@
     "# Discussion\n",
     "- found playtime and age is indicative of subscription status\n",
     "- these two factors can help predict whether a player is subscribed\n",
-    "- limitations: only 194 observations, k is 7, so **effect?** need bigger data set to fully implment model (Best K is 19 but too big of a number for data)\n",
     "- future question: what is the relationship between Age, played_hours, and subscription status? Is there a positive or negative correlation between played_hours and Age?\n",
     "- \n",
     "Overall, our findings indicate the using play time and age as predictors yielded better odds of predicating subscription status as opposed to randomly guessing. We expected to find this so this does confirm our hypothesis (All though only a small improvement over randomly guessing). These findings suggest that player "
@@ -3092,7 +3099,9 @@
    "id": "3459281a-f8a9-4d87-aa9b-6b557fd699de",
    "metadata": {},
    "source": [
-    "# References"
+    "# References\n",
+    "Tiffany Timbers, Trevor Campbell. “Data Science.” Chapter 1 R and the Tidyverse, 21 Aug. 2024, datasciencebook.ca/intro.html. Accessed 05 Apr. 2025. \n",
+    "“Home Page.” Pacific Laboratory for Artificial Intelligence, 5 Dec. 2024, plai.cs.ubc.ca/. Accessed 05 Apr. 2025. "
    ]
   }
  ],
