--- a/GROUP_PART FINAL.ipynb
+++ b/GROUP_PART FINAL.ipynb
@@ -5,7 +5,7 @@
    "id": "17343eff-0688-4334-8c3f-f287e21ed61c",
    "metadata": {},
    "source": [
-    "# DSCI 100 Project Group 1 \n",
+    "# The Affect of Age and Hours Played on a Player's Subscription Status\n",
     "**By: Tima Komarov (82239450), Carmen Wen (95556593), Pim-on Ingkanisorn(44803013), Omar Harb (57845414)**\n",
     "<br>"
    ]
@@ -18,11 +18,11 @@
    },
    "source": [
     "# Introduction\n",
-    "The UBC Computer Science research group, led by Frank Wood, set up a MineCraft server to collect in-game data on player behaviours. The recorded data will be used in this project to explore factors that influence players' engagement, specifically focusing on which characteristics and behaviours predict a player's likelihood of subscribing to the game's newsletter. \n",
+    "The UBC Computer Science research group, led by Frank Wood, set up a MineCraft server to collect in-game data on player behaviours. The recorded data will be used in this study to explore factors that influence players' engagement, specifically focusing on which characteristics and behaviours predict a player's likelihood of subscribing to the game's newsletter. \n",
     "\n",
-    "For this project, we aim to answer the broad question: \"What player characteristics and behaviors are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\" More specifically, **can the number of hours played and the players age predict if a player subscribes to a game related newsletter in the players data set?** \n",
+    "For this study, we aim to answer the broad question: \"What player characteristics and behaviors are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?\" More specifically, **can the number of hours played and the players age predict if a player subscribes to a game related newsletter in the players data set?** \n",
     "\n",
-    "We would do this by using the players.csv dataset, which contains about 7 variables. However, for our analysis, only played_hours, and Age will be utilized to develop a predictive model using k-nearest neighbours for subscription likelihood.\n",
+    "We would do this by using the `players.csv` dataset, which contains about 7 variables. However, for our analysis, only played_hours, and Age will be utilized to develop a predictive model using k-nearest neighbours for subscription likelihood.\n",
     "\n",
     "| Variable Name  | Type        | Description |\n",
     "|---------------|------------|-------------|\n",
@@ -31,7 +31,7 @@
     "| subscribe   | logical     | subscription status (TRUE/FALSE) |\n",
     "<p style=\"text-align: center; font-style:italic\">Figure 1 - Variables used in the data analysis</p>\n",
     "\n",
-    "We expect that a player's played_hours and Age be used as predictors of their subscription status.\n"
+    "We hypothesis that a player's played_hours and Age be used as predictors of their subscription status.\n"
    ]
   },
   {
@@ -3087,11 +3087,8 @@
    "metadata": {},
    "source": [
     "# Discussion\n",
-    "- found playtime and age is indicative of subscription status\n",
-    "- these two factors can help predict whether a player is subscribed\n",
-    "- future question: what is the relationship between Age, played_hours, and subscription status? Is there a positive or negative correlation between played_hours and Age?\n",
-    "- \n",
-    "Overall, our findings indicate the using play time and age as predictors yielded better odds of predicating subscription status as opposed to randomly guessing. We expected to find this so this does confirm our hypothesis (All though only a small improvement over randomly guessing). These findings suggest that player "
+    "\n",
+    "Playtime and age has been found to be indicative of subscription status to a game-related newsletter. These two factors can predict whether a player is subcribed with an accuracy of 67.5%. Overall, our findings indicate the using play time and age as predictors yielded better odds of predicating subscription status as opposed to randomly guessing. Based on the exploratory bar plots shown above, this is what we expected to find, and our hypothesis is satisfied. These findings suggest that players around the age of twenty who played for around eight hours are most likely to subscribe to a game related-newsletter. These findings are impactful because advertisements could be targeted towards this category of players. For example, knowing that mostly twenty-year-olds read these news letters, the written language and style could be catered towards that age group. Or, when a player reaches eight hours of gameplay, a notification could pop up encouraging a player to subscribe to a game related newsletter. A future exploratory question could investigate the correlation between age and played hours. Annother predictive question that arises from this study could be estimating the age of a player based on their played hours and subscription status."
    ]
   },
   {
@@ -3100,7 +3097,9 @@
    "metadata": {},
    "source": [
     "# References\n",
-    "Tiffany Timbers, Trevor Campbell. “Data Science.” Chapter 1 R and the Tidyverse, 21 Aug. 2024, datasciencebook.ca/intro.html. Accessed 05 Apr. 2025. \n",
+    "Tiffany Timbers, Trevor Campbell. “Data Science.” Chapter 1 R and the Tidyverse, 21 Aug. 2024, datasciencebook.ca/intro.html.\n",
+    "\n",
+    "Accessed 05 Apr. 2025. \n",
     "“Home Page.” Pacific Laboratory for Artificial Intelligence, 5 Dec. 2024, plai.cs.ubc.ca/. Accessed 05 Apr. 2025. "
    ]
   }
