--- a/GROUP_PART FINAL.ipynb
+++ b/GROUP_PART FINAL.ipynb
@@ -3057,11 +3057,18 @@
    "metadata": {},
    "source": [
     "# References\n",
-    "Tiffany Timbers, Trevor Campbell. “Data Science.” Chapter 1 R and the Tidyverse, 21 Aug. 2024, datasciencebook.ca/intro.html.\n",
+    "Tiffany Timbers, Trevor Campbell. “Data Science.” Chapter 1 R and the Tidyverse, 21 Aug. 2024, datasciencebook.ca/intro.html. Accessed 05 Apr. 2025. \n",
     "\n",
-    "Accessed 05 Apr. 2025. \n",
-    "“Home Page.” Pacific Laboratory for Artificial Intelligence, 5 Dec. 2024, plai.cs.ubc.ca/. Accessed 05 Apr. 2025. "
+    "Wood, Frank. *Minecraft Player and Session Dataset*. Collected by the UBC Computer Science Research Group. Provided in DSCI 100 course materials, 2025. Unpublished dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc44b250-4786-4afa-ba2f-af5459f1bde2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
