Final text edit +streamline

--- a/GROUP 1 FINAL.ipynb
+++ b/GROUP 1 FINAL.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 260,
    "id": "8fa3d100-35e0-4650-b9af-b57f4af40955",
    "metadata": {},
    "outputs": [],
@@ -139,65 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 226,
-   "id": "a83ad97a-4aa4-4342-9d54-1eedb75e6b76",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 2 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>subscribe</th><th scope=col>n</th><th scope=col>percent</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>FALSE</td><td> 52</td><td>26.80412</td></tr>\n",
-       "\t<tr><td>TRUE </td><td>142</td><td>73.19588</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 2 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " subscribe & n & percent\\\\\n",
-       " <fct> & <int> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t FALSE &  52 & 26.80412\\\\\n",
-       "\t TRUE  & 142 & 73.19588\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 2 × 3\n",
-       "\n",
-       "| subscribe &lt;fct&gt; | n &lt;int&gt; | percent &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| FALSE |  52 | 26.80412 |\n",
-       "| TRUE  | 142 | 73.19588 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  subscribe n   percent \n",
-       "1 FALSE      52 26.80412\n",
-       "2 TRUE      142 73.19588"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "player_proportions <- clean_player |>\n",
-    "                      group_by(subscribe) |>\n",
-    "                      summarize(n = n()) |>\n",
-    "                      mutate(percent = 100*n/nrow(clean_player))\n",
-    "player_proportions"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "4e6a7f56-54c0-4b18-98d4-0a1255f879a6",
@@ -216,6 +157,22 @@
     "**Model Evaluation**\n",
     "\n",
     "After identifying the best k-value (k = 7), we trained a final model on the full training set and tested it on the holdout test set. The final model achieved an accuracy of 67.5%, which is lower than the random baseline. This rejects our hypothesis that age and played hours are useful predictors of newsletter subscription status.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa1d7cbe-f66e-4b55-a6ab-9a3d8047f159",
+   "metadata": {},
+   "source": [
+    "# Procedure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6f9508f-5f75-4e25-9985-1bf6ac4bd198",
+   "metadata": {},
+   "source": [
+    "**Data Wrangling**"
    ]
   },
   {
@@ -1080,7 +1037,76 @@
    "id": "55cc6f01-f705-48fb-bf92-be004c58c2e1",
    "metadata": {},
    "source": [
-    "Before classification, we must determine the balance of subscriptions status to later determine whether our algorithm is better at predicting than random guessing. "
+    "Before classification, we must determine the balance of subscriptions status to later determine whether our algorithm is better at predicting than majority classifier. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "f71ca8c2-fc44-4307-b824-bfeaf8d666ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 2 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>subscribe</th><th scope=col>n</th><th scope=col>percent</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>FALSE</td><td> 52</td><td>26.80412</td></tr>\n",
+       "\t<tr><td>TRUE </td><td>142</td><td>73.19588</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " subscribe & n & percent\\\\\n",
+       " <fct> & <int> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t FALSE &  52 & 26.80412\\\\\n",
+       "\t TRUE  & 142 & 73.19588\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 3\n",
+       "\n",
+       "| subscribe &lt;fct&gt; | n &lt;int&gt; | percent &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| FALSE |  52 | 26.80412 |\n",
+       "| TRUE  | 142 | 73.19588 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  subscribe n   percent \n",
+       "1 FALSE      52 26.80412\n",
+       "2 TRUE      142 73.19588"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "baseline <- clean_player |>\n",
+    "    group_by(subscribe) |>\n",
+    "    summarize(n = n()) |>\n",
+    "    mutate(percent = n/nrow(clean_player)) |>\n",
+    "    mutate(percent = percent * 100)\n",
+    "baseline"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0c71a9d5-025c-4d44-b7fe-958bc7f3768d",
+   "metadata": {},
+   "source": [
+    "Our baseline is 73.2% and is using majority classifier when subscribe = TRUE."
    ]
   },
   {
@@ -2417,66 +2443,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 233,
-   "id": "a1967a6b-97a5-48f9-ad34-293c24823496",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 2 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>subscribe</th><th scope=col>n</th><th scope=col>percent</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>FALSE</td><td> 52</td><td>26.80412</td></tr>\n",
-       "\t<tr><td>TRUE </td><td>142</td><td>73.19588</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 2 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " subscribe & n & percent\\\\\n",
-       " <fct> & <int> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t FALSE &  52 & 26.80412\\\\\n",
-       "\t TRUE  & 142 & 73.19588\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 2 × 3\n",
-       "\n",
-       "| subscribe &lt;fct&gt; | n &lt;int&gt; | percent &lt;dbl&gt; |\n",
-       "|---|---|---|\n",
-       "| FALSE |  52 | 26.80412 |\n",
-       "| TRUE  | 142 | 73.19588 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  subscribe n   percent \n",
-       "1 FALSE      52 26.80412\n",
-       "2 TRUE      142 73.19588"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "proportions <- clean_player |>\n",
-    "    group_by(subscribe) |>\n",
-    "    summarize(n = n()) |>\n",
-    "    mutate(percent = n/nrow(clean_player)) |>\n",
-    "    mutate(percent = percent * 100)\n",
-    "proportions"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "722d9eba-218d-4b12-8498-4e482bec573c",
@@ -2511,28 +2477,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 262,
    "id": "7fffffd9-2c49-4941-b6fe-6091226bed35",
    "metadata": {},
    "outputs": [],
    "source": [
     "spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |>\n",
-    "  set_engine(\"kknn\") |>\n",
-    "  set_mode(\"classification\")\n",
+    "    set_engine(\"kknn\") |>\n",
+    "    set_mode(\"classification\")\n",
     "\n",
     "recipe <- recipe(subscribe ~ ., data = player_train) |>\n",
-    "  step_scale(all_predictors()) |>\n",
-    "  step_center(all_predictors())\n",
+    "    step_scale(all_predictors()) |>\n",
+    "    step_center(all_predictors())\n",
     "\n",
     "k_vals <- tibble(neighbors = seq(from = 1, to = 10, by = 1))\n",
     "\n",
     "player_fold <- vfold_cv(player_train, v = 5, strata = subscribe)\n",
     "\n",
     "knn_results <- workflow() |>\n",
-    "  add_recipe(recipe) |>\n",
-    "  add_model(spec) |>\n",
-    "  tune_grid(resamples = player_fold, grid = k_vals) |>\n",
-    "  collect_metrics()"
+    "    add_recipe(recipe) |>\n",
+    "    add_model(spec) |>\n",
+    "    tune_grid(resamples = player_fold, grid = k_vals) |>\n",
+    "collect_metrics()"
    ]
   },
   {
@@ -2955,7 +2921,7 @@
    "source": [
     "#accuracies and visualizing best k value\n",
     "accuracies <- knn_results |>\n",
-    "  filter(.metric == \"accuracy\")\n",
+    "filter(.metric == \"accuracy\")\n",
     "\n",
     "accuracy_versus_k <- ggplot(accuracies, aes(x = neighbors, y = mean))+\n",
     "       geom_point() +\n",
@@ -3005,10 +2971,10 @@
    "source": [
     "#This code determines the best k value\n",
     "best_k <- accuracies |>\n",
-    "        arrange(desc(mean)) |>\n",
-    "        head(1) |>\n",
-    "        select(neighbors) |>\n",
-    "        pull(neighbors)\n",
+    "    arrange(desc(mean)) |>\n",
+    "    head(1) |>\n",
+    "    select(neighbors) |>\n",
+    "    pull(neighbors)\n",
     "best_k"
    ]
   },
@@ -3195,7 +3161,7 @@
    "metadata": {},
    "source": [
     "# Results \n",
-    "Using k=7, we found an accuracy of 0.675 or 67.5%. Which is 5.7% worse then randomly guessing whether an individual is subscribed to the newsletter or not."
+    "Using k=7, we found an accuracy of 0.675 or 67.5%. Which is 5.7% worse than our baseline statistic whether an individual is subscribed to the newsletter or not."
    ]
   },
   {
@@ -3216,7 +3182,7 @@
    "source": [
     "# Discussion\n",
     "\n",
-    "We found that when combined playtime and age were **not** indicative of subscription status to the game’s newsletter. While our model was unsuccessful in being more accurate as opposed to randomly guessing the analysis using the graphs and the model does provide some insight into the data. Playtime still has a relation to subscription status; we can conclude this through figure 7 and the significantly higher average playtime of subscribers to the newsletter. When combining playtime and age within a prediction model though, they don’t seem to be valid indicators of subscription status to a newsletter. Our hypothesis was disproven. \n",
+    "We cannot conclude that playtime and age are indicative of subscription status to the game’s newsletter. While our model was unsuccessful in being more accurate as opposed to randomly guessing the analysis using the graphs and the model does provide some insight into the data. Playtime still has a relation to subscription status; we can conclude this through figure 7 and the significantly higher average playtime of subscribers to the newsletter. When combining playtime and age within a prediction model though, they don’t seem to be valid indicators of subscription status to a newsletter. Our hypothesis was disproven. \n",
     "\n",
     "We were surprised with these findings as we were expecting our model to at least match or slightly outperform random guessing. It could be the case that only one of the variables we used is a valid predictor, with the other variable hampering the ability of said variable to serve as a valid predictor within our model. Regardless of what could have caused the outcome, we can still gain insight from our work. An important finding can be found within figure 7 and how high playtime seems to be related with subscription status to the newsletter. We can also conclude that to make an accurate model (or any inferential analysis), more data would be needed. The data we did have was incredibly varied as figure 3 indicated with several large outliers in terms of playtime and age. \n",
     "\n",
@@ -3224,7 +3190,7 @@
     "\n",
     "There are also several sources of bias, such as the survey being voluntary, and a player's age being self-reported. These sampling biases and missing data contribute to the overall limitations of this dataset that impacted our analysis. \n",
     "\n",
-    "Future questions can explore how other variables within the dataset can (Isolated and in combination with other variables) predict subscription status, exploring potentially what predictors the best is to create the most accurate predictive model. Other questions might include, how average playtime impacts subscription status, or how does the pattern of play time impact subscription?"
+    "Future questions can explore how other variables within the dataset can (isolated and in combination with other variables) predict subscription status, exploring potentially what predictors the best is to create the most accurate predictive model. Other questions might include, how average playtime impacts subscription status, or how does the pattern of play time impact subscription?"
    ]
   },
   {
@@ -3237,14 +3203,6 @@
     "\n",
     "Wood, Frank. *Minecraft Player and Session Dataset*. Collected by the UBC Computer Science Research Group. Provided in DSCI 100 course materials, 2025. Unpublished dataset."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b44919ec-d2dc-421e-8830-b37f5fd60b9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
